# tape-sorter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/composite-actions/install-dependencies/: action.yml
.github/workflows/: cpp-ci.yml
core/: CMakeLists.txt  i_tape.h  tape.cpp  tape.h  tape_config.cpp  tape_config.h  tape_sorter.cpp  tape_sorter.h  tmp_tape_factory.cpp  tmp_tape_factory.h
example/: config.txt  input.txt  output.txt
tests/: CMakeLists.txt  test_config_parser.cpp  test_tape.cpp  test_tape_sorter.cpp  test_tmp_tape_factory.cpp
